# cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  pyproject.toml
{{cookiecutter.repo_name}}/data/: README.md
{{cookiecutter.repo_name}}/results/: README.md
{{cookiecutter.repo_name}}/scripts/: README.md
